# dosbox-staging

./: BUILD.md  Makefile.am  PACKAGING.md  configure.ac  meson.build
.github/workflows/: config.yml  linux.yml  macos.yml  pvs-studio.yml  windows.yml
contrib/fedora/: dosbox-staging.spec
include/: Makefile.am  cpu.h  dosbox.h  mem.h  paging.h  shell.h  string_utils.h  support.h
po/: dosbox.pot  sources.txt
po/pl/: dosbox.po
scripts/: extract-text.sh
src/: Makefile.am  dosbox.cpp  main.cpp
src/cpu/: Makefile.am  cache.h  core_dyn_x86.cpp  core_dynrec.cpp  cpu.cpp  dyn_cache.h
src/cpu/core_dyn_x86/: cache.h
src/cpu/core_dynrec/: Makefile.am  cache.h
src/cpu/core_full/: ea_lookup.h
src/debug/: debug.cpp
src/dos/: cdrom.h  dos_mscdex.cpp  dos_programs.cpp  drive_cache.cpp  meson.build  program_mode.cpp  program_mode.h
src/gui/: sdl_mapper.cpp  sdlmain.cpp
src/hardware/: cmos.cpp  innovation.cpp  meson.build  mixer.cpp  pcspeaker.cpp  ps1audio.cpp
src/ints/: int10_modes.cpp
src/midi/: midi.cpp  midi_alsa.cpp  midi_alsa.h  midi_coremidi.h  midi_fluidsynth.cpp  midi_fluidsynth.h  midi_handler.h  midi_lasynth_model.h  midi_mt32.cpp  midi_mt32.h  midi_win32.h
src/misc/: Makefile.am  string_utils.cpp
src/shell/: shell.cpp  shell_cmds.cpp
subprojects/: fluidsynth.wrap
tests/: .gitignore  Makefile.am  mem.cpp  string_utils.cpp  tests.vcxproj  tests.vcxproj.filters
vs/: dosbox.sln  dosbox.vcxproj  dosbox.vcxproj.filters
